Extend & refactor Review api
