# Review.API/dtos/CreateReviewDto.go
@@ -1,8 +1,7 @@
 package dtos
 
-// ReviewDto is a DTO for api requests
-type ReviewDto struct {
-	ID        string `json:"id"`
+// CreateReviewDto is a DTO for api requests
+type CreateReviewDto struct {
 	ProductID string `json:"productid"`
 	UserID    string `json:"userid"`
 	Text      string `json:"text"`
