# Review.CommandRpcServer/reviewservice/review_service.pb.go
@@ -26,6 +26,8 @@ type Review struct {
 	Text                 string   `protobuf:"bytes,1,opt,name=Text,proto3" json:"Text,omitempty"`
 	Star                 int32    `protobuf:"varint,2,opt,name=Star,proto3" json:"Star,omitempty"`
 	ReviewID             string   `protobuf:"bytes,3,opt,name=ReviewID,proto3" json:"ReviewID,omitempty"`
+	ProductID            string   `protobuf:"bytes,4,opt,name=ProductID,proto3" json:"ProductID,omitempty"`
+	UserID               string   `protobuf:"bytes,5,opt,name=UserID,proto3" json:"UserID,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -73,6 +75,20 @@ func (m *Review) GetStar() int32 {
 func (m *Review) GetReviewID() string {
 	if m != nil {
 		return m.ReviewID
+	}
+	return ""
+}
+
+func (m *Review) GetProductID() string {
+	if m != nil {
+		return m.ProductID
+	}
+	return ""
+}
+
+func (m *Review) GetUserID() string {
+	if m != nil {
+		return m.UserID
 	}
 	return ""
 }
@@ -234,7 +250,7 @@ func (m *GetTopReviewsRequest) GetCount() int32 {
 }
 
 type RateReviewRequest struct {
-	ReviewId             int32    `protobuf:"varint,1,opt,name=reviewId,proto3" json:"reviewId,omitempty"`
+	ReviewId             string   `protobuf:"bytes,1,opt,name=reviewId,proto3" json:"reviewId,omitempty"`
 	Star                 int32    `protobuf:"varint,2,opt,name=star,proto3" json:"star,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
@@ -266,11 +282,11 @@ func (m *RateReviewRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_RateReviewRequest proto.InternalMessageInfo
 
-func (m *RateReviewRequest) GetReviewId() int32 {
+func (m *RateReviewRequest) GetReviewId() string {
 	if m != nil {
 		return m.ReviewId
 	}
-	return 0
+	return ""
 }
 
 func (m *RateReviewRequest) GetStar() int32 {
@@ -324,28 +340,30 @@ func init() {
 func init() { proto.RegisterFile("review_service.proto", fileDescriptor_e02e8736aac43c55) }
 
 var fileDescriptor_e02e8736aac43c55 = []byte{
-	// 329 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x93, 0x4f, 0x4f, 0xb3, 0x40,
-	0x10, 0xc6, 0xbb, 0x6f, 0x5f, 0xaa, 0x9d, 0xa6, 0x49, 0x9d, 0x60, 0x6c, 0xb8, 0x48, 0xd6, 0xc4,
-	0x70, 0x50, 0xd2, 0xd4, 0x4f, 0x60, 0xa4, 0xd6, 0x26, 0xfe, 0x49, 0x96, 0xde, 0x0d, 0x96, 0x3d,
-	0xf4, 0xa0, 0x20, 0x6c, 0xa9, 0x7e, 0x03, 0x3f, 0xb6, 0x61, 0x77, 0x05, 0x59, 0xda, 0x93, 0xb7,
-	0x99, 0xc9, 0x33, 0xbf, 0x61, 0x9f, 0x27, 0x80, 0x9d, 0xf1, 0x62, 0xcd, 0xb7, 0xcf, 0x39, 0xcf,
-	0x8a, 0xf5, 0x8a, 0xfb, 0x69, 0x96, 0x88, 0x04, 0x87, 0x6a, 0xaa, 0x87, 0xf4, 0x1e, 0x7a, 0x4c,
-	0x0e, 0x10, 0xe1, 0xff, 0x92, 0x7f, 0x88, 0x31, 0x71, 0x89, 0xd7, 0x67, 0xb2, 0x2e, 0x67, 0xa1,
-	0x88, 0xb2, 0xf1, 0x3f, 0x97, 0x78, 0x16, 0x93, 0x35, 0x3a, 0x70, 0xa8, 0x36, 0x16, 0xc1, 0xb8,
-	0x2b, 0xb5, 0x55, 0x4f, 0xaf, 0x61, 0xf4, 0xc8, 0xb7, 0xaa, 0x65, 0xfc, 0x7d, 0xc3, 0x73, 0x81,
-	0x97, 0xd0, 0x53, 0x27, 0x25, 0x79, 0x30, 0x3d, 0xf6, 0x1b, 0x5f, 0xe0, 0x6b, 0xb5, 0x16, 0xd1,
-	0xf3, 0x0a, 0x1f, 0x97, 0xa7, 0x32, 0x5d, 0xeb, 0xcf, 0xaa, 0x7a, 0xea, 0xc3, 0x68, 0xce, 0x45,
-	0xf3, 0x54, 0xad, 0x0f, 0x0c, 0x7d, 0x40, 0x2f, 0xc0, 0x9e, 0x73, 0xb1, 0x4c, 0x52, 0xb5, 0x92,
-	0xff, 0xec, 0xd8, 0x60, 0xad, 0x92, 0xcd, 0x9b, 0x7a, 0xb7, 0xc5, 0x54, 0x43, 0x6f, 0xe0, 0x88,
-	0x45, 0x82, 0xef, 0xc3, 0xc7, 0x5a, 0x5d, 0xf5, 0xa5, 0x53, 0xf9, 0x2f, 0xa7, 0xca, 0x9a, 0x1e,
-	0x80, 0x35, 0x7b, 0x4d, 0xc5, 0xe7, 0xf4, 0xab, 0x0b, 0x43, 0x85, 0x0a, 0xd5, 0xa3, 0xf1, 0x0e,
-	0x20, 0x8c, 0x0a, 0xcd, 0xc7, 0x53, 0xc3, 0x12, 0xd3, 0x43, 0xe7, 0x64, 0xa7, 0x67, 0x8b, 0x98,
-	0x76, 0xf0, 0x01, 0x06, 0x35, 0x29, 0xff, 0x0b, 0xca, 0x23, 0x13, 0x82, 0x33, 0xe8, 0x57, 0xb6,
-	0xb6, 0x60, 0xa6, 0xe1, 0xce, 0xee, 0x2c, 0x69, 0x07, 0x9f, 0x60, 0xd8, 0x70, 0x1b, 0xcf, 0xda,
-	0xa8, 0x56, 0x16, 0x7b, 0x71, 0x13, 0x82, 0xb7, 0x00, 0x75, 0x20, 0xe8, 0x9a, 0x42, 0x33, 0x2b,
-	0xc7, 0x36, 0x14, 0x32, 0x08, 0xda, 0x79, 0xe9, 0xc9, 0xbf, 0xe0, 0xea, 0x3b, 0x00, 0x00, 0xff,
-	0xff, 0x3b, 0xdc, 0x4a, 0x4f, 0x1d, 0x03, 0x00, 0x00,
+	// 355 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x53, 0xcf, 0x4f, 0xc2, 0x30,
+	0x18, 0xa5, 0xc2, 0xa6, 0x7c, 0x84, 0x04, 0xbf, 0x4c, 0x5d, 0x16, 0x13, 0x49, 0x4d, 0x0c, 0x07,
+	0x5d, 0x08, 0xfe, 0x05, 0xc6, 0x21, 0xee, 0xe0, 0x8f, 0x0c, 0x3c, 0x1b, 0x84, 0x1e, 0x38, 0xe8,
+	0xb0, 0x2d, 0xa0, 0x57, 0x4f, 0xfe, 0xd9, 0x66, 0x6d, 0xdd, 0xa4, 0x83, 0x93, 0xb7, 0xef, 0x7b,
+	0x7d, 0x7d, 0x7b, 0x7d, 0x2f, 0x03, 0x8f, 0xb3, 0xe5, 0x8c, 0xad, 0x9e, 0x05, 0xe3, 0xcb, 0xd9,
+	0x84, 0x85, 0x73, 0x9e, 0xca, 0x14, 0x9b, 0x1a, 0x35, 0x20, 0xfd, 0x22, 0xe0, 0x26, 0x0a, 0x41,
+	0x84, 0xda, 0x88, 0x7d, 0x48, 0x9f, 0xb4, 0x49, 0xa7, 0x9e, 0xa8, 0x39, 0xc3, 0x86, 0x72, 0xcc,
+	0xfd, 0x9d, 0x36, 0xe9, 0x38, 0x89, 0x9a, 0x31, 0x80, 0x3d, 0x7d, 0x23, 0x8e, 0xfc, 0xaa, 0xe2,
+	0xe6, 0x3b, 0x1e, 0x43, 0xfd, 0x91, 0xa7, 0xd3, 0xc5, 0x44, 0xc6, 0x91, 0x5f, 0x53, 0x87, 0x05,
+	0x80, 0x87, 0xe0, 0x3e, 0x09, 0xc6, 0xe3, 0xc8, 0x77, 0xd4, 0x91, 0xd9, 0xe8, 0x15, 0xb4, 0xee,
+	0xd9, 0x4a, 0x8b, 0x24, 0xec, 0x7d, 0xc1, 0x84, 0xc4, 0x0b, 0x70, 0xb5, 0x53, 0xe5, 0xa7, 0xd1,
+	0x3b, 0x08, 0xd7, 0x8c, 0x87, 0x86, 0x6d, 0x48, 0xf4, 0x2c, 0x37, 0x35, 0xcd, 0x0c, 0x72, 0x33,
+	0x9b, 0xc7, 0xe4, 0x3b, 0x0d, 0xa1, 0x35, 0x60, 0x72, 0xfd, 0x53, 0x05, 0x3f, 0xb2, 0xf8, 0x11,
+	0x3d, 0x07, 0x6f, 0xc0, 0xe4, 0x28, 0x9d, 0xeb, 0x2b, 0xe2, 0xf7, 0x8e, 0x07, 0xce, 0x24, 0x5d,
+	0xbc, 0xe9, 0xb4, 0x9c, 0x44, 0x2f, 0xf4, 0x1a, 0xf6, 0x93, 0xb1, 0x64, 0xdb, 0xe4, 0x4b, 0x76,
+	0xb2, 0x7c, 0xc5, 0x9f, 0x7c, 0xb3, 0x99, 0xee, 0x82, 0xd3, 0x7f, 0x9d, 0xcb, 0xcf, 0xde, 0x77,
+	0x15, 0x9a, 0x5a, 0x6a, 0xa8, 0x1f, 0x8d, 0xb7, 0x00, 0xc3, 0xf1, 0xd2, 0xe8, 0xe3, 0x89, 0x15,
+	0x89, 0x9d, 0x61, 0x70, 0xb4, 0x31, 0xb3, 0x78, 0x4a, 0x2b, 0x78, 0x07, 0x8d, 0x42, 0x49, 0xfc,
+	0x47, 0xaa, 0x43, 0xba, 0x04, 0xfb, 0x50, 0xcf, 0x63, 0x2d, 0x89, 0xd9, 0x81, 0x07, 0x9b, 0xbb,
+	0xa4, 0x15, 0x7c, 0x80, 0xe6, 0x5a, 0xda, 0x78, 0x5a, 0x96, 0x2a, 0x75, 0xb1, 0x55, 0xae, 0x4b,
+	0xf0, 0x06, 0xa0, 0x28, 0x04, 0xdb, 0x36, 0xd1, 0xee, 0x2a, 0xf0, 0x2c, 0x86, 0x2a, 0x82, 0x56,
+	0x5e, 0x5c, 0xf5, 0xf3, 0x5c, 0xfe, 0x04, 0x00, 0x00, 0xff, 0xff, 0x20, 0x29, 0x8b, 0xbc, 0x54,
+	0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
